# QRC-20P

./: CONTRACTS.md  Cargo.toml  FFI-IMPORT-FIXES.md  README.md  RUST-FFI-REDESIGN.md  Test-1  Test-2  halo2_circuits.rs  rust-toolchain.toml  test_u256.rs
contracts/: QRC20P.abi  QRC20Private.abi  QRC20Private.sol  QRC20Public.abi  QRC20Public.sol  TokenFactory.abi  TokenFactory.sol  UniversalSwitch.abi  UniversalSwitch.sol  build.sh
params/: halo2_k14.params
scripts/: deploy.js
src/: amount_splitter.rs  api.rs  common_types.rs  error.rs  ffi.rs  ffi_amount_privacy.rs  ffi_dual_token.rs  ffi_network_privacy.rs  ffi_precompiles.rs  ffi_private_transfer.rs  ffi_stealth_addresses.rs  ffi_universal_switch.rs  ffi_validation.rs  key_management.rs  lib.rs  network_privacy.rs  security_utils.rs  token_factory.rs  transaction.rs  universal_switch.rs  zk_proofs.rs
src/circuits/: halo_circuits.rs  mod.rs
src/crypto/: bn256_poseidon.rs  mod.rs  poseidon.rs
src/merkle/: merkle_tree.rs
src/nullifiers/: secure_privacy.rs
src/stealth/: stealth_addresses.rs
